--- a/src/index.css
+++ b/src/index.css
@@ -40,15 +40,18 @@ aside {
   margin-top: 100px;
   margin-right: 30px;
 }
+
 .list-group-item.active {
   background-color: #007bff;
   color: #fff;
 }
+
 footer i {
   color: white;
   font-size: 25px;
   display: inline-block;
 }
+
 footer i:hover {
   color: rgb(9, 41, 62);
 }
@@ -56,3 +59,37 @@ footer i:hover {
 .list-group-item {
   cursor: pointer;
 }
+
+@media screen and (max-width: 768px) {
+  .header {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .logo {
+    margin-right: 0;
+  }
+  form {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  input[type="text"] {
+    width: 100%;
+  }
+  aside {
+    margin-top: 30px;
+    margin-right: 0;
+  }
+}
+
+@media only screen and (min-device-width: 390px) and (max-device-width: 428px) and (orientation: portrait) {
+  .header {
+    font-size: 1em;
+  }
+  .logo {
+    height: 40px;
+  }
+  form {
+    margin-top: 10px;
+  }
+}
+
